[tool.poetry]
name = "GrainLearning"
version = "2.0.1"
description = "A Bayesian uncertainty quantification toolbox for discrete and continuum numerical models of granular materials"
authors = [
    "Hongyang Cheng <h.cheng@utwente.nl>",
    "Luisa Orozco <l.orozco@esciencecenter.nl>",
    "Retief Lubbe <r.lubbe@utwente.nl>",
    "Aron Jansen <a.p.jansen@esciencecenter.nl>"]
readme = "README.md"
license = "GPLv2"
homepage = "https://grainlearning.readthedocs.io/"
repository = "https://github.com/GrainLearning/grainLearning"
keywords = ["Bayesian inference", "Uncertainty quantification", "Non-parametric Gaussian mixture", "DEM", "Constitutive modeling", "Granular materials"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.2"
scipy = "^1.9.1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.0"

Sphinx = {version = "^5.1.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.19.2", optional = true}
sphinx-mdinclude = {version = "*", optional = true}
sphinx-rtd-theme = {version=">=1.1.1", optional = true}
pytest = {version = "^6.2.4", optional = true}
pytest-cov = {version = "^2.12.1", optional = true}
prospector = {version = "^1.7.6", optional = true, extras = ["with_pyroma"]}
pyroma = {version = "^4.0", optional = true}
h5py = {version ="^3.7.0", optional = true}
wandb = {version ="^0.13.4", optional = true}
tensorflow = {version ="2.10.0", optional = true}
ipykernel = {version = "*", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "sphinx-mdinclude", "sphinx-rtd-theme"]
dev = ["pytest", "pytest-cov", "prospector", "pyroma", "h5py"]
rnn = ["wandb", "tensorflow"]
tutorials = ["ipykernel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "grainlearning"}
]
